# aily

./: .gitignore  Cargo.toml  README.md
aily/: Cargo.toml
aily/src/: client.rs  lib.rs
aily/src/providers/: anthropic.rs  deepseek.rs  mod.rs  openai.rs
cloudflare/: Cargo.toml  wrangler.toml
cloudflare/src/: lib.rs
